--- a/README.org
+++ b/README.org
@@ -45,6 +45,10 @@ its content.
 
 ** Febrero 2023
 
+*** 08-Feb-23
++ [[https://lawrencecpaulson.github.io//2023/02/08/Cbrt23_Irrational.html][An irrationality proof involving cube roots]]. ~ Lawrence C. Paulson (@LawrPaulson). #ITP #IsabelleHOL #Math
++ [[https://arxiv.org/abs/2302.03494][A categorical archive of ChatGPT failures]]. ~ Ali Borji. #ChatGPT
+
 *** 07-Feb-23
 + [[https://cmu-fantastic-bugs.github.io/][Course: Fantastic bugs and how to find them (A tour of applied program analysis and domain-specific automated testing) ~ Rohan Padhye]]. #CompSci
 + [[https://cmu-fantastic-bugs.github.io/slides/1-intro.pdf][Fantastic bugs and how to find them (Introduction)]]. ~ Rohan Padhye. #CompSci
