--- a/README.org
+++ b/README.org
@@ -46,6 +46,12 @@ its content.
 
 ** Marzo 2023
 
+*** 05-Mar-23
++ [[https://rachel.cafe/2022/12/10/why-be-pure.html][Why be pure?]] ~ Rachel Samuelsson (@rachelrosen@types.pl). #Haskell #FunctionalProgramming
++ [[https://mihai.page/evolving-is-digit/][Implementing isDigit using genetic algorithms]]. ~ Mihai Maruseac (@mihaimaruseac). #Haskell #FunctionalProgramming
++ [[https://medium.com/@noahhradek/haskell-for-python-programmers-fa3a95ec7074][Haskell for Python programmers]]. ~ Noah Hradek. #Haskell #Python
++ [[https://youtu.be/vD-YSTLKRC8][Evaluating ChatGPT on 1,000 math word problems]]. ~ Paulo Shakarian. #AI #ChatGPT #Math
+
 *** 04-Mar-23
 + [[https://people.cs.umass.edu/~brun/pubs/pubs/Agrawal23icse-demo.pdf][PRoofster: Automated formal verification]]. ~ Arpan Agrawal et als. #ITP #Coq
 + [[https://rachel.cafe/2022/12/15/haskell-and-logic.html][Haskell and logic]]. ~ Rachel Samuelsson (@rachelrosen@types.pl). #Haskell #FunctionalProgramming #Logic #Math
