--- a/README.org
+++ b/README.org
@@ -46,6 +46,15 @@ its content.
 
 ** Marzo 2023
 
+*** 07-Mar-23
++ [[https://hal.inria.fr/hal-04008820/document][Design patterns of hierarchies for order structures]]. ~ Xavier Allamigeon, Quentin Canu, Cyril Cohen, Kazuhiko Sakaguchi, Pierre-Yves Strub. #ITP #Coq #Math
++ [[https://gupea.ub.gu.se/bitstream/handle/2077/75394/CSE%2022-15%20Grupp%2022-21.pdf][A language for board games (Development of an embedded domain-specific language for describing board games)]]. ~ Edvin Alestig et als. #Haskell #FunctionalProgramming
++ [[https://arxiv.org/abs/2303.00924][HasChor: Functional choreographic programming for all (Functional pearl)]]. ~ Gan Shen, Shun Kashiwa, Lindsey Kuper. #Haskell #FunctionalProgramming
++ [[https://arxiv.org/abs/2303.01328][Effects and effect handlers for programmable inference]]. ~ Minh Nguyen, Roly Perera, Meng Wang, Steven Ramsay. #Haskell #FunctionalProgramming
++ [[https://www.theguardian.com/technology/2023/mar/07/techscape-meta-leak-llama-chatgpt-ai-crossroads][TechScape: Will Meta’s massive leak democratise AI – and at what cost? ~ Alex Hern (@alexhern)]]. #AI
++ [[https://www.theguardian.com/commentisfree/2023/mar/07/us-government-artificial-intelligence-robert-reich][Is the US government ready for the rise of artificial intelligence? ~ Robert Reich]]. #AI
++ [[https://theconversation.com/los-retos-juridicos-de-la-inteligencia-artificial-a-traves-de-seis-casos-reales-200850][Los retos jurídicos de la inteligencia artificial a través de seis casos reales]]. ~ María Isabel Montserrat Sánchez-Escribano. #IA
+
 *** 06-Mar-23
 + [[http://blog.sigfpe.com/2023/03/constructing-clifford-algebras-using.html][Constructing Clifford algebras using the super tensor product]]. ~ Dan Piponi (@sigfpe). #Haskell #FunctionalProgramming #Math
 + [[https://flaviocorpa.com/haskell-for-elm-developers-giving-names-to-stuff-part-3-monads.html][Haskell for Elm developers: giving names to stuff (Part 3: Monads!)]]. ~ Flavio Corpa (@FlavioCorpa). #Haskell #Elm #FunctionalProgramming
