--- a/README.org
+++ b/README.org
@@ -46,6 +46,14 @@ its content.
 
 ** Marzo 2023
 
+*** 09-Mar-23
++ [[https://www.isa-afp.org/entries/Probability_Inequality_Completeness.html][A sound and complete calculus for probability inequalities (in Isabelle/HOL)]]. ~ Matthew Doty. #ITP #IsabelleHOL
++ [[https://serokell.io/blog/haskell-in-enterprise-interview-with-rob-harrison][Haskell in enterprise: Interview with Rob Harrison]]. ~ Gints Dreimanis. #Haskell #FunctionalProgramming
++ [[https://www.evalapply.org/posts/why-and-how-i-use-org-mode/index.html][Why and how I use "Org Mode" for my writing and more]]. ~ Aditya Athalye. #OrgMode #Emacs
++ [[https://www.nytimes.com/2023/03/08/technology/chatbots-disrupt-internet-industry.html][The chatbots are here, and the Internet industry is in a tizzy]]. ~ Tripp Mickle, Cade Metz & Nico Grant. #AI #ChatGPT
++ [[https://freedom-to-tinker.com/2023/03/08/can-chatgpt-and-its-successors-go-from-cool-to-tool/][Can ChatGPT -and its successors- go from cool to tool? ~ Matthew Salganik]]. #AI #ChatGPT
++ [[https://mangelesbroullon.wordpress.com/2023/03/08/integracion-de-los-llm-en-los-buscadores/][Integración de los LLM en los buscadores]]. ~ Ángeles Broullón (@AngelesBroullon). #IA #LLM
+
 *** 08-Mar-23
 + [[https://lemonidas.github.io/pdf/MergingInductiveRelations.pdf][Merging inductive relations]]. ~ Jacob Prinz, Leonidas Lampropoulos. #ITP #Coq
 + [[http://www.lix.polytechnique.fr/Labo/Pablo.DONATO/abstracts/coqpl23.pdf][Integrating graphical proofs in Coq]]. ~ Pablo Donato, Benjamin Werner,  Kaustuv Chaudhuri. #ITP #Coq
